# cpp-training

./: CMakeLists.txt  c++ practices.code-workspace
Exercises/: CMakeLists.txt
Exercises/Include/easy/: easy.hpp
Exercises/Include/hard/: hard.hpp
Exercises/Include/header/: standards.hpp
Exercises/Include/medium/: medium.hpp
Exercises/Include/very_easy/: very_easy.hpp
Exercises/Source/easy/: easy.cpp
Exercises/Source/hard/: hard.cpp
Exercises/Source/medium/: medium.cpp
Exercises/Source/very_easy/: very_easy.cpp
Tests/: CMakeLists.txt  main.cpp
Tests/Sources/: CMakeLists.txt
Tests/Sources/easy_test/: CMakeLists.txt  easy_test.cpp
Tests/Sources/hard_test/: CMakeLists.txt  hard_test.cpp
Tests/Sources/medium_test/: CMakeLists.txt  medium_test.cpp
Tests/Sources/very_easy_test/: CMakeLists.txt  very_easy_test.cpp
